--- a/src/ejs/page/_top.ejs
+++ b/src/ejs/page/_top.ejs
@@ -3,5 +3,6 @@
     <p class="p-top__text">Hello, ejs.</p>
     <p class="p-top__text--sass"></p>
     <p class="p-top__text" id="js-test"></p>
+    <p class="p-top__img"><img src="./images/test.jpg" alt="img"></p>
   </div>
 </main>
