--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -31,6 +31,6 @@
 //== component ---prefix .c-
 @import "component/_card";
 
-//== page      ---prefix .p-
-@import "page/_top";
-@import "page/_single";
+//== project   ---prefix .p-
+@import "project/_top";
+@import "project/_single";
