Add async svg sprite

--- a/src/ejs/layout/_footer.ejs
+++ b/src/ejs/layout/_footer.ejs
@@ -1,9 +1,9 @@
 <footer class="footer">
   <div class="footer__inner">
-    <!-- <div class="footer__sns">
-      <p>twitter</p>
-      <p>fb</p>
-    </div> -->
+    <div class="footer__sns">
+      <p class="footer__sns-icon"><a href="" class="m-svgIcon"><svg class="m-svgIcon__tw"><use xlink:href="#twitterIcon"/></svg></a></p>
+      <p class="footer__sns-icon"><a href="" class="m-svgIcon"><svg class="m-svgIcon__fb"><use xlink:href="#facebookIcon2"/></svg></a></p>
+    </div>
     <p class="footer__copy">&copy; 42EG4M1</p>
   </div>
 </footer>
