--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -21,7 +21,7 @@
 @import "config/foundation/_ie";
 
 //== module    ---prefix .m-
-@import "module/_toTop";
+@import "module/_svgIcon";
 
 //== layout
 @import "layout/_header";
