--- a/src/ejs/layout/_footer.ejs
+++ b/src/ejs/layout/_footer.ejs
@@ -8,6 +8,6 @@
   </div>
 </footer>
 
-<script charset="utf-8" src="./scripts/bundle.min.js?ver=<%= meta.jsVersion %>"></script>
+<script charset="utf-8" src="./js/bundle.min.js?ver=<%= meta.jsVersion %>"></script>
 </body>
 </html>
