--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -2,8 +2,8 @@
   meta = {
     cssVersion: "0.0.1",
     jsVersion: "0.0.1",
-    siteName: "Front-end Starter",
-    subName: ""
+    siteName: "web-starter-ejs",
+    subName: "My static website starter kit."
   };
 %><% include layout/_header %>
 
