--- a/src/ejs/layout/_header.ejs
+++ b/src/ejs/layout/_header.ejs
@@ -29,6 +29,6 @@
 
 <header class="header">
   <div class="header__inner">
-    <h1 class="header__ttl">Front-end Starter</h1>
+    <h1 class="header__ttl">web-starter-ejs</h1>
   </div>
 </header>
